# pygame_web

./: pyproject.toml
pygame_web/: main.py
