[tool.poetry]
name = "pygame-web"
version = "0.1.0"
description = ""
authors = ["jskdr <jamessungjin.kim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"
pygbag = "^0.9.2"
pip = "^24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
